--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "psi-mammoliti-challenge",
+  "name": "psicobook",
   "private": true,
   "version": "0.0.1",
+  "author": {
+    "email": "juanzitelli7@gmail.com",
+    "name": "Juan Agustin Zitelli"
+  },
   "type": "module",
+  "engines": {
+    "node": "20.11.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
