fix vercel deploy 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "remix build",
+
+  "framework": "remix",
+  "buildCommand": "remix vite:build",
   "devCommand": "remix dev",
   "installCommand": "npm install",
-  "framework": null,
   "functions": {
     "app/entry.server.tsx": {
       "includeFiles": "build/**"
