--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/node": "^2.17.0",
     "@remix-run/react": "^2.17.0",
     "@remix-run/serve": "^2.17.0",
+    "@remix-run/vercel": "^1.19.3",
     "isbot": "^3.6.8",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
