--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "node": "20.11.0"
   },
   "scripts": {
-    "build": "remix build",
+    "build": "remix vite:build",
     "dev": "remix dev --manual",
-    "start": "remix-serve ./build/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "db:generate": "npx prisma generate",
     "db:push": "prisma db push",
@@ -24,7 +24,6 @@
     "@remix-run/node": "^2.17.0",
     "@remix-run/react": "^2.17.0",
     "@remix-run/serve": "^2.17.0",
-    "@remix-run/vercel": "^1.19.3",
     "isbot": "^3.6.8",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
