--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "engines": {
-    "node": "20.11.0"
+    "node": ">=20.11.0"
   },
   "scripts": {
     "build": "remix vite:build",
@@ -21,16 +21,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "@remix-run/node": "^2.17.0",
-    "@remix-run/react": "^2.17.0",
-    "@remix-run/serve": "^2.17.0",
+    "@remix-run/node": "^2.16.7",
+    "@remix-run/react": "^2.16.7",
+    "@remix-run/serve": "^2.16.7",
+    "@vercel/remix": "^2.16.7",
     "isbot": "^3.6.8",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.17.0",
+    "@remix-run/dev": "^2.16.7",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
