--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-DATABASE_URL="full connection string here"
+# Database
+DATABASE_URL="postgresql://username:password@localhost:5432/psicobook"
+
+# This is used by Prisma for local development
+DIRECT_URL="postgresql://username:password@localhost:5432/psicobook"
