--- a/package.json
+++ b/package.json
@@ -1,47 +1,24 @@
 {
   "name": "psicobook",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": {
     "email": "juanzitelli7@gmail.com",
     "name": "Juan Agustin Zitelli"
   },
   "type": "module",
   "engines": {
-    "node": ">=20.11.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix dev --manual",
+    "dev": "remix vite:dev",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:generate": "npx prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "@remix-run/node": "^2.16.7",
-    "@remix-run/react": "^2.16.7",
-    "@remix-run/serve": "^2.16.7",
-    "@vercel/remix": "^2.16.7",
-    "isbot": "^3.6.8",
-    "lucide-react": "^0.294.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.16.7",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.6",
-    "tsx": "^4.6.2",
-    "typescript": "^5.1.6",
-    "vite": "^5.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "db:seed": "tsx prisma/seed.ts",
+    "postinstall": "prisma generate"
   }
 }
