--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "framework": "remix"
+  "buildCommand": "remix vite:build",
+  "devCommand": "remix vite:dev --port $PORT",
+  "installCommand": "npm install",
+  "framework": null,
+  "outputDirectory": "build/client"
 }
