Optimizar Remix para Vercel con versiones más actuales

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/psicobook"
 
-# This is used by Prisma for local development
-DIRECT_URL="postgresql://username:password@localhost:5432/psicobook"
+# Vercel Environment Variables (set these in Vercel dashboard)
+# NODE_ENV="production"
+# DATABASE_URL="your-neon-connection-string"
+
+# Local Development
+NODE_ENV="development"
