--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "dev": "remix vite:dev --port 3000",
     "start": "remix-serve ./build/server/index.js",
+    "preview": "npm run build && npm run start",
     "typecheck": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "db:generate": "npx prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "deploy": "npm run build && vercel --prod"
   },
   "dependencies": {
     "@remix-run/node": "2.16.7",
