--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,28 @@
 {
-  "buildCommand": "remix vite:build",
-  "devCommand": "remix vite:dev --port $PORT",
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": null,
-  "outputDirectory": "build/client"
+  "outputDirectory": "build/client",
+  "functions": {
+    "build/server/index.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
+  "routes": [
+    {
+      "src": "/build/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" }
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/server/index.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
