--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@remix-run/node": "2.16.7",
     "@remix-run/react": "2.16.7",
-    "@remix-run/serve": "2.16.7",
+    "@remix-run/server-runtime": "2.16.7",
     "@vercel/remix": "2.16.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
