--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "remix-serve ./build/server/index.js",
     "preview": "npm run build && npm run start",
     "typecheck": "tsc",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "db:generate": "npx prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
@@ -24,29 +24,30 @@
     "deploy": "npm run build && vercel --prod"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@remix-run/node": "2.16.7",
     "@remix-run/react": "2.16.7",
     "@remix-run/server-runtime": "2.16.7",
     "@vercel/remix": "2.16.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "isbot": "^5.1.29",
     "lucide-react": "^0.469.0",
-    "@prisma/client": "^6.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "2.16.7",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
-    "typescript": "^5.7.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
     "prisma": "^6.1.0",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.38.0",
     "vite": "^6.0.7",
     "vite-tsconfig-paths": "^5.1.4"
   }
